--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,14 +19,18 @@ jobs:
 
       - name: Install Theos
         run: |
-          git clone --depth=1 https://github.com/theos/theos.git $HOME/theos
+          git clone --recursive --depth=1 https://github.com/theos/theos.git $HOME/theos
+
+      - name: Update Theos vendor files
+        run: |
+          $HOME/theos/bin/update-theos
 
       - name: Copy iPhoneOS6.1 SDK to Theos
         run: |
           mkdir -p $HOME/theos/sdks
           cp -r ./iPhoneOS6.1.sdk $HOME/theos/sdks/
 
-      - name: Build isyncnotif
+      - name: Build iSyncNotif
         env:
           THEOS: ${{ env.HOME }}/theos
           SDKVERSION: 6.1
@@ -43,5 +47,5 @@ jobs:
 
       - name: Show example usage script
         run: |
+          echo "Example usage:"
           echo "ssh root@iphone_ip '/usr/bin/isyncnotif \"title here\" \"message here\"'"
-
