--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,10 +27,11 @@ jobs:
         run: |
           $THEOS/bin/update-theos
 
-      - name: Copy iPhoneOS6.1 SDK to Theos
+      - name: Download iPhoneOS6.1 SDK
         run: |
-          mkdir -p $HOME/theos/sdks
-          cp -r ./iPhoneOS6.1.sdk $HOME/theos/sdks/
+          curl -L -o iPhoneOS6.1.sdk.zip https://github.com/growtopiajaw/iPhoneOS-SDK/releases/download/v1.0/iPhoneOS6.1.sdk.zip
+          unzip iPhoneOS6.1.sdk.zip -d $HOME/theos/sdks
+
 
       - name: Build iSyncNotif
         env:
