--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,8 @@ name: Build iSyncNotif
 
 on:
   push:
-    branches:
-      - main
+    tags:
+      - 'v*.*.*'  # triggers on tags like v1.0.0, v2.1.3 etc.
 
 jobs:
   build:
@@ -49,6 +49,7 @@ jobs:
       - name: Upload to GitHub Release
         uses: softprops/action-gh-release@v2
         with:
+          tag_name: ${{ github.ref_name }}
           files: ./iSyncNotif/.theos/obj/debug/iSyncNotif.zip
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE }}
