--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,22 +38,18 @@ jobs:
 
   
 
-      - name: Zip built binary
-        run: |
-          cd ${{ github.workspace }}/iSyncNotif/.theos/obj/debug
-          zip iSyncNotif.zip iSyncNotif
-
-      - name: Upload built zip (Artifact)
+      - name: Upload built binary (Artifact)
         uses: actions/upload-artifact@v4
         with:
-          name: iSyncNotif
-          path: ./iSyncNotif/.theos/obj/debug/iSyncNotif.zip
+            name: iSyncNotif
+            path: ./iSyncNotif/.theos/obj/debug/iSyncNotif
+
 
       - name: Upload to GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ github.ref_name }}
-          files: ./iSyncNotif/.theos/obj/debug/iSyncNotif.zip
+          files: ./iSyncNotif/.theos/obj/debug/iSyncNotif
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE }}
 
