--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,8 @@
 name: Build iSyncNotif
-#git tag v1.0.0
-#git push origin v1.0.0
 on:
   push:
     tags:
-      - 'v*.*.*'  # triggers on tags like v1.0.0, v2.1.3 etc.
+      - 'v*.*.*'
 
 jobs:
   build:
@@ -36,14 +34,11 @@ jobs:
           make clean
           make
 
-  
-
       - name: Upload built binary (Artifact)
         uses: actions/upload-artifact@v4
         with:
-            name: iSyncNotif
-            path: ./iSyncNotif/.theos/obj/debug/iSyncNotif
-
+          name: iSyncNotif
+          path: ./iSyncNotif/.theos/obj/debug/iSyncNotif
 
       - name: Upload to GitHub Release
         uses: softprops/action-gh-release@v2
@@ -56,5 +51,4 @@ jobs:
       - name: Show example usage script
         run: |
           echo "scp iSyncNotif root@iphone_ip:/usr/bin/"
-          echo "ssh root@iphone_ip '/usr/bin/iSyncNotif "title here" "message here"'"
-
+          echo "ssh root@iphone_ip '/usr/bin/iSyncNotif \"title here\" \"message here\"'"
