--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,11 +3,11 @@ on:
   push:
     tags:
       - 'v*.*.*'
+  workflow_dispatch:  # Allows manual triggering
 
 jobs:
   build:
     runs-on: macos-latest
-
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
