--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,10 @@
 name: Build iSyncNotif
 on:
-  push:
-    tags:
-      - 'v*.*.*'
-  workflow_dispatch:  # Allows manual triggering
+  workflow_dispatch:
+    inputs:
+      tag:
+        description: 'Release tag (e.g., v1.0.2)'
+        required: true  # Allows manual triggering
 
 jobs:
   build:
@@ -11,6 +12,8 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Required for tag information
 
       - name: Install dependencies
         run: |
@@ -41,12 +44,14 @@ jobs:
           path: ./iSyncNotif/.theos/obj/debug/iSyncNotif
 
       - name: Upload to GitHub Release
+        if: ${{ github.event_name == 'workflow_dispatch' || startsWith(github.ref, 'refs/tags/') }}
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ github.ref_name }}
+          tag_name: ${{ github.event.inputs.tag || github.ref_name }}
+          name: Release ${{ github.event.inputs.tag || github.ref_name }}
           files: ./iSyncNotif/.theos/obj/debug/iSyncNotif
         env:
-          GITHUB_TOKEN: ${{ secrets.RELEASE }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Show example usage script
         run: |
