--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,9 @@ on:
     inputs:
       tag:
         description: 'Release tag (e.g., v1.0.2)'
-        required: true  # Allows manual triggering
+        required: true
+permissions:
+  contents: write  # Required for creating releases
 
 jobs:
   build:
@@ -13,7 +15,7 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Required for tag information
+          fetch-depth: 0
 
       - name: Install dependencies
         run: |
